[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spec-kit"
version = "0.1.0"
description = "A toolkit for writing and running specifications as executable tests"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "spec-kit contributors" }
]
keywords = ["spec", "testing", "bdd", "specification", "tdd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "black>=23.0",
    "pre-commit>=3.4",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.23",
]

[project.scripts]
spec-kit = "spec_kit.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/spec-kit"
Repository = "https://github.com/your-org/spec-kit"
Issues = "https://github.com/your-org/spec-kit/issues"
Changelog = "https://github.com/your-org/spec-kit/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spec_kit" = ["templates/*.j2", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=spec_kit --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["spec_kit"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["src/spec_kit"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
